feat: GET /countries/image & create image during POST /countries/refresh
