# routes/country.js
@@ -5,12 +5,14 @@ import {
   deleteCountry,
   RefreshCountries,
   getCountryStatus,
+  getSummaryImage,
 } from "../controllers/country.js";
 
 const router = express.Router();
 
 router.route("/countries").get(getCountries);
 router.route("/status").get(getCountryStatus);
+router.route("/countries/image").get(getSummaryImage);
 router.route("/countries/:name").get(getCountry).delete(deleteCountry);
 router.route("/countries/refresh").post(RefreshCountries);
 
